More tests for LangChain4jSupport class